Bugfix/288: Email Button not Visible Fix

--- a/src/views/Members/members.module.scss
+++ b/src/views/Members/members.module.scss
@@ -62,6 +62,10 @@
   }
 }
 
+.bulkMailIcon {
+  margin-right: 0.8rem;
+}
+
 .filterButton:global(
     .ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled)
   ):hover {
